修复详情页无法返回列表

--- a/套票详情.html
+++ b/套票详情.html
@@ -3379,7 +3379,7 @@
         <div id="u928" class="ax_default paragraph" selectiongroup="breadcrumbs">
           <div id="u928_div" class=""></div>
           <div id="u928_text" class="text ">
-            <p><span style="color:rgba(0, 0, 0, 0.447058823529412);">一级菜单&nbsp; /&nbsp;&nbsp; 二级菜单&nbsp; /</span><span style="color:rgba(0, 0, 0, 0.847058823529412);">&nbsp; </span><span style="color:rgba(0, 0, 0, 0.647058823529412);">三级菜单</span></p>
+            <p><span style="color:rgba(0, 0, 0, 0.447058823529412);">套票列表 /&nbsp; </span><span style="color:rgba(0, 0, 0, 0.847058823529412);"> </span><span style="color:rgba(0, 0, 0, 0.647058823529412);">套票详情</span></p>
           </div>
         </div>
 
@@ -3731,6 +3731,10 @@
             </div>
           </div>
         </div>
+      </div>
+
+      <!-- Unnamed (热区) -->
+      <div id="u990" class="ax_default">
       </div>
     </div>
   </body>
