--- a/发票详情.html
+++ b/发票详情.html
@@ -156,8 +156,8 @@
         </div>
       </div>
 
-      <!-- Unnamed (矩形) -->
-      <div id="u892" class="ax_default shape">
+      <!-- 内容容器 (矩形) -->
+      <div id="u892" class="ax_default shape" data-label="内容容器">
         <div id="u892_div" class=""></div>
       </div>
 
