--- a/经销商管理.html
+++ b/经销商管理.html
@@ -62,7 +62,7 @@
 
             <!-- Unnamed (图片) -->
             <div id="u8" class="ax_default image">
-              <img id="u8_img" class="img " src="images/经销商管理/regen/u8.png"/>
+              <img id="u8_img" class="img " src="images/经销商管理/u8.png"/>
             </div>
 
             <!-- Unnamed (组 合) -->
@@ -73,7 +73,7 @@
 
                 <!-- Unnamed (矩形) -->
                 <div id="u11" class="ax_default box_21">
-                  <img id="u11_img" class="img " src="images/经销商管理/regen/u11.png"/>
+                  <img id="u11_img" class="img " src="images/经销商管理/u11.png"/>
                   <div id="u11_text" class="text ">
                     <p><span>机构用户</span></p>
                   </div>
@@ -81,12 +81,12 @@
 
                 <!-- Unnamed (图片) -->
                 <div id="u12" class="ax_default image">
-                  <img id="u12_img" class="img " src="images/经销商管理/regen/u12.png"/>
+                  <img id="u12_img" class="img " src="images/经销商管理/u12.png"/>
                 </div>
 
                 <!-- Unnamed (图片) -->
                 <div id="u13" class="ax_default image">
-                  <img id="u13_img" class="img " src="images/经销商管理/regen/u13.png"/>
+                  <img id="u13_img" class="img " src="images/经销商管理/u13.png"/>
                 </div>
               </div>
 
@@ -103,12 +103,12 @@
 
                 <!-- Unnamed (图片) -->
                 <div id="u16" class="ax_default image">
-                  <img id="u16_img" class="img " src="images/经销商管理/regen/u13.png"/>
+                  <img id="u16_img" class="img " src="images/经销商管理/u13.png"/>
                 </div>
 
                 <!-- Unnamed (图片) -->
                 <div id="u17" class="ax_default image">
-                  <img id="u17_img" class="img " src="images/经销商管理/regen/u17.png"/>
+                  <img id="u17_img" class="img " src="images/经销商管理/u17.png"/>
                 </div>
               </div>
 
@@ -188,7 +188,7 @@
 
             <!-- Unnamed (图片) -->
             <div id="u29" class="ax_default image">
-              <img id="u29_img" class="img " src="images/经销商管理/regen/u29.png"/>
+              <img id="u29_img" class="img " src="images/经销商管理/u29.png"/>
             </div>
 
             <!-- Unnamed (矩形) -->
@@ -241,7 +241,7 @@
 
             <!-- Unnamed (矩形) -->
             <div id="u37" class="ax_default iconfont">
-              <img id="u37_img" class="img " src="images/经销商管理/regen/u37.png"/>
+              <img id="u37_img" class="img " src="images/经销商管理/u37.png"/>
               <div id="u37_text" class="text ">
                 <p><span></span></p>
               </div>
@@ -343,7 +343,7 @@
 
         <!-- Unnamed (图片) -->
         <div id="u52" class="ax_default image">
-          <img id="u52_img" class="img " src="images/经销商管理/regen/u52.png"/>
+          <img id="u52_img" class="img " src="images/经销商管理/u52.png"/>
         </div>
       </div>
 
@@ -459,7 +459,7 @@
 
           <!-- Unnamed (图片) -->
           <div id="u68" class="ax_default image">
-            <img id="u68_img" class="img " src="images/经销商管理/regen/u68.png"/>
+            <img id="u68_img" class="img " src="images/经销商管理/u68.png"/>
           </div>
         </div>
 
@@ -473,7 +473,7 @@
 
           <!-- Unnamed (图片) -->
           <div id="u71" class="ax_default image">
-            <img id="u71_img" class="img " src="images/经销商管理/regen/u71.png"/>
+            <img id="u71_img" class="img " src="images/经销商管理/u71.png"/>
           </div>
         </div>
 
@@ -487,7 +487,7 @@
 
           <!-- Unnamed (图片) -->
           <div id="u74" class="ax_default image">
-            <img id="u74_img" class="img " src="images/经销商管理/regen/u68.png"/>
+            <img id="u74_img" class="img " src="images/经销商管理/u68.png"/>
           </div>
         </div>
       </div>
@@ -597,7 +597,7 @@
 
             <!-- Unnamed (图片) -->
             <div id="u94" class="ax_default image">
-              <img id="u94_img" class="img " src="images/经销商管理/regen/u94.png"/>
+              <img id="u94_img" class="img " src="images/经销商管理/u94.png"/>
             </div>
           </div>
 
@@ -671,17 +671,17 @@
 
           <!-- Unnamed (三角形) -->
           <div id="u105" class="ax_default box_21">
-            <img id="u105_img" class="img " src="images/经销商管理/regen/u105.png"/>
+            <img id="u105_img" class="img " src="images/经销商管理/u105.png"/>
           </div>
 
           <!-- Unnamed (三角形) -->
           <div id="u106" class="ax_default box_21">
-            <img id="u106_img" class="img " src="images/经销商管理/regen/u105.png"/>
+            <img id="u106_img" class="img " src="images/经销商管理/u105.png"/>
           </div>
 
           <!-- Unnamed (三角形) -->
           <div id="u107" class="ax_default box_21">
-            <img id="u107_img" class="img " src="images/经销商管理/regen/u105.png"/>
+            <img id="u107_img" class="img " src="images/经销商管理/u105.png"/>
           </div>
 
           <!-- Unnamed (矩形) -->
@@ -702,7 +702,7 @@
 
           <!-- Unnamed (三角形) -->
           <div id="u110" class="ax_default box_21">
-            <img id="u110_img" class="img " src="images/经销商管理/regen/u105.png"/>
+            <img id="u110_img" class="img " src="images/经销商管理/u105.png"/>
           </div>
 
           <!-- Unnamed (矩形) -->
@@ -715,7 +715,7 @@
 
           <!-- Unnamed (三角形) -->
           <div id="u112" class="ax_default box_21">
-            <img id="u112_img" class="img " src="images/经销商管理/regen/u105.png"/>
+            <img id="u112_img" class="img " src="images/经销商管理/u105.png"/>
           </div>
         </div>
       </div>
@@ -732,7 +732,7 @@
 
         <!-- Unnamed (图片) -->
         <div id="u116" class="ax_default image">
-          <img id="u116_img" class="img " src="images/经销商管理/regen/u116.png"/>
+          <img id="u116_img" class="img " src="images/经销商管理/u116.png"/>
         </div>
 
         <!-- Unnamed (组 合) -->
@@ -740,7 +740,7 @@
 
           <!-- Unnamed (图片) -->
           <div id="u118" class="ax_default image">
-            <img id="u118_img" class="img " src="images/经销商管理/regen/u118.jpg"/>
+            <img id="u118_img" class="img " src="images/经销商管理/u118.jpg"/>
           </div>
 
           <!-- Unnamed (矩形) -->
@@ -754,12 +754,12 @@
 
         <!-- Unnamed (图片) -->
         <div id="u120" class="ax_default image">
-          <img id="u120_img" class="img " src="images/经销商管理/regen/u120.png"/>
+          <img id="u120_img" class="img " src="images/经销商管理/u120.png"/>
         </div>
 
         <!-- Unnamed (图片) -->
         <div id="u121" class="ax_default image">
-          <img id="u121_img" class="img " src="images/经销商管理/regen/u121.png"/>
+          <img id="u121_img" class="img " src="images/经销商管理/u121.png"/>
         </div>
       </div>
 
