去掉左侧菜单的收缩功能

--- a/经销商管理.html
+++ b/经销商管理.html
@@ -826,35 +826,40 @@
         </div>
       </div>
 
+      <!-- 旋转的icon (图片) -->
+      <div id="u131" class="ax_default image" data-label="旋转的icon">
+        <img id="u131_img" class="img " src="images/经销商管理/旋转的icon_u131.png"/>
+      </div>
+
       <!-- Unnamed (组 合) -->
-      <div id="u131" class="ax_default" data-left="256" data-top="64" data-width="1184" data-height="97">
+      <div id="u132" class="ax_default" data-left="256" data-top="64" data-width="1184" data-height="97">
 
         <!-- Unnamed (矩形) -->
-        <div id="u132" class="ax_default box_21">
-          <div id="u132_div" class=""></div>
+        <div id="u133" class="ax_default box_21">
+          <div id="u133_div" class=""></div>
         </div>
 
         <!-- Unnamed (矩形) -->
-        <div id="u133" class="ax_default paragraph" selectiongroup="breadcrumbs">
-          <div id="u133_div" class=""></div>
-          <div id="u133_text" class="text ">
+        <div id="u134" class="ax_default paragraph" selectiongroup="breadcrumbs">
+          <div id="u134_div" class=""></div>
+          <div id="u134_text" class="text ">
             <p><span style="color:rgba(0, 0, 0, 0.447058823529412);">机构用户&nbsp; /&nbsp;&nbsp; </span><span style="color:rgba(0, 0, 0, 0.647058823529412);">经销商管理</span></p>
           </div>
         </div>
 
         <!-- Unnamed (矩形) -->
-        <div id="u134" class="ax_default label">
-          <div id="u134_div" class=""></div>
-          <div id="u134_text" class="text ">
+        <div id="u135" class="ax_default label">
+          <div id="u135_div" class=""></div>
+          <div id="u135_text" class="text ">
             <p><span>经销商管理</span></p>
           </div>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u135" class="ax_default box_2 ax_default_hidden" style="display:none; visibility: hidden">
-        <div id="u135_div" class=""></div>
-        <div id="u135_text" class="text ">
+      <div id="u136" class="ax_default box_2 ax_default_hidden" style="display:none; visibility: hidden">
+        <div id="u136_div" class=""></div>
+        <div id="u136_text" class="text ">
           <p><span>24</span></p>
         </div>
       </div>
